feito estilo do teclado.

--- a/index.html
+++ b/index.html
@@ -5,44 +5,45 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Teclado Virtual</title>
+    <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
-    <section class="teclado">
-        <div class="tecla"></div>
-        <div class="tecla"></div>
-        <div class="tecla"></div>
-        <div class="tecla"></div>
-        <div class="tecla"></div>
-        <div class="tecla"></div>
-        <div class="tecla"></div>
-        <div class="tecla"></div>
-        <div class="tecla"></div>
-        <div class="tecla"></div>
-        <div class="tecla"></div>
-        <div class="tecla"></div>
-        <div class="tecla"></div>
-        <div class="tecla"></div>
-        <div class="tecla"></div>
-        <div class="tecla"></div>
-        <div class="tecla"></div>
-        <div class="tecla"></div>
-        <div class="tecla"></div>
-        <div class="tecla"></div>
-        <div class="tecla"></div>
-        <div class="tecla"></div>
-        <div class="tecla"></div>
-        <div class="tecla"></div>
-        <div class="tecla"></div>
-        <div class="tecla"></div>
-        <div class="tecla"></div>
-        <div class="tecla"></div>
-        <div class="tecla"></div>
-        <div class="tecla"></div>
-        <div class="tecla"></div>
-        <div class="tecla"></div>
-        <div class="tecla"></div>
-        <div class="tecla"></div>
-        <div class="tecla"></div>
+    <section class="teclado container">
+        <div class="tecla">q</div>
+        <div class="tecla">w</div>
+        <div class="tecla">e</div>
+        <div class="tecla">r</div>
+        <div class="tecla">t</div>
+        <div class="tecla">y</div>
+        <div class="tecla">u</div>
+        <div class="tecla">i</div>
+        <div class="tecla">o</div>
+        <div class="tecla">p</div>
+        <div class="tecla">a</div>
+        <div class="tecla">s</div>
+        <div class="tecla">d</div>
+        <div class="tecla">f</div>
+        <div class="tecla">g</div>
+        <div class="tecla">h</div>
+        <div class="tecla">j</div>
+        <div class="tecla">k</div>
+        <div class="tecla">l</div>
+        <div class="tecla">ç</div>
+        <div class="tecla">z</div>
+        <div class="tecla">x</div>
+        <div class="tecla">c</div>
+        <div class="tecla">v</div>
+        <div class="tecla">b</div>
+        <div class="tecla">n</div>
+        <div class="tecla">m</div>
+        <div class="tecla">fixa</div>
+        <div class="tecla">tab</div>
+        <div class="tecla">esc</div>
+        <div class="tecla">,</div>
+        <div class="tecla">.</div>
+        <div class="tecla">;</div>
+        <div class="tecla">?</div>
+        <div class="tecla">!</div>
         <div class="tecla"></div>
     </section>
 </body>
